# bags

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ql.yml  release.yml
src/: app.rs  config.rs  db.rs  main.rs  notifications.rs  theme.rs  types.rs
src/api/: coingecko.rs  mod.rs
src/ui/: mod.rs  render.rs
