[package]
name = "bags"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
notify-rust = "4"
