[package]
name = "bags"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.38", features = ["bundled-sqlcipher-vendored-openssl"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
notify-rust = "4"
openssl = { version = "0.10", features = ["vendored"] }
